Fix sidebar footer overlap

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -14,6 +14,10 @@
   @include breakpoint($x-large) {
     max-width: $x-large;
   }
+
+  @media screen and (min-width: $sidebar-screen-min-width) {
+    min-height: calc(100vh - #{$masthead-height});
+  }
 }
 
 .page {
